--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 DATABASE_URL=postgres://postgres:changeme@db:5432/postgres
 POSTGRES_PASSWORD=changeme
 PORT=3000
-USE_RECAPTCHA=true
-RECAPTCHA_SECRET=6Lf_PaYUAAAAAEQY_cL5EBBoK2HLYhnS025y09Fm
+# USE_RECAPTCHA
+# RECAPTCHA_SECRET
+ 
