--- a/frontend/extension/manifest.json
+++ b/frontend/extension/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "TabChat",
+	"name": "Tabchat",
 	"version": "1.4.0",
-	"description": "Chat with the other people viewing a page.",
+	"description": "Leave comments on any webpage.",
 	"icons": {
     "16": "icons/icon_16.png",
     "48": "icons/icon_48.png",
@@ -23,7 +23,7 @@
       "128": "icons/icon_128.png"
 		},
 		"default_popup": "popup.html",
-		"default_title": "TabChat"
+		"default_title": "Tabchat"
   },
   "content_security_policy": "script-src 'self' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/; object-src 'self'; frame-src https://www.google.com/recaptcha/",
 	"permissions": [
