--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.6",
+    "http-status-codes": "^1.3.2",
     "moment": "^2.23.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
