--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY . /app
 
+COPY ../shared /shared
+
 RUN yarn install
 
 # Only used for local testing - Heroku will ignore this and randomly
