--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       - PORT
       - USE_RECAPTCHA
       - RECAPTCHA_SECRET
+      - TABCHAT_ENV
     ports:
       - "3000:3000"
     volumes:
       - .:/app
-      - ../shared:/shared
     depends_on:
       - db
   db:
