--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
-  "name": "docket",
+  "name": "tabchat",
   "version": "1.0.0",
   "description": "",
   "main": "background.js",
   "scripts": {
-    "start": "webpack --watch --mode=development",
-    "build": "webpack --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node start.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/express-rate-limit": "^3.3.0",
+    "@types/node-fetch": "^2.3.4",
     "@types/react-textarea-autosize": "^4.3.3",
+    "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
+    "concurrently": "^4.1.1",
     "css-loader": "^3.0.0",
     "expose-loader": "^0.7.5",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
     "typescript": "^3.4.4",
     "web-ext-types": "^3.1.0",
     "webextension-polyfill": "^0.4.0",
     "webpack": "^4.8.1",
     "webpack-cli": "^3.3.1",
-    "webpack-extension-reloader": "^1.0.1"
+    "webpack-extension-reloader": "^1.0.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.6",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-rate-limit": "^5.0.0",
     "http-status-codes": "^1.3.2",
+    "knex": "^0.19.0",
     "moment": "^2.23.0",
+    "node-fetch": "^2.6.0",
+    "pg": "^7.5.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-textarea-autosize": "^7.0.4",
+    "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   }
 }
