--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
 		"moduleResolution": "node"
 	},
 	"include": [
-		"src/**/*", "../shared/**/*"
+		"./frontend/src/**/*", "./backend/src/**/*", "./shared/**/*"
 	]
 }
