--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack --watch --mode=development",
     "build": "webpack --mode=production",
+    "publish-to-chrome-webstore": "yarn build && node ./scripts/publishToChromeWebStore.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,9 @@
   "devDependencies": {
     "@types/react-textarea-autosize": "^4.3.3",
     "@types/socket.io-client": "^1.4.32",
+    "archiver": "^3.1.1",
+    "chrome-web-store-item-property": "^1.1.2",
+    "chrome-webstore-upload": "^0.2.2",
     "css-loader": "^3.0.0",
     "expose-loader": "^0.7.5",
     "html-webpack-plugin": "^3.2.0",
