Read configuration the same way on the frontend as it's done on the backend. Set max comment length to 4000

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
+NODE_ENV=development
 DATABASE_URL=postgres://postgres:changeme@db:5432/postgres
 POSTGRES_PASSWORD=changeme
 PORT=3000
-# USE_RECAPTCHA
-# RECAPTCHA_SECRET
- 
+USE_RECAPTCHA=false
+MAX_COMMENT_LENGTH=4000
+RECAPTCHA_SECRET=
