--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack --watch --mode=development",
     "build": "webpack --mode=production",
-    "publish-to-chrome-webstore": "node ./scripts/publishToChromeWebStore.js"
+    "zip": "node ./scripts/createZipFromExtensionFolder"
   },
   "keywords": [],
   "author": "",
