--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,10 @@ jobs:
       - name: Build frontend
         working-directory: frontend/
         run: yarn build
-      - name: Create extension.zip
-        working-directory: frontend/
-        run: yarn run zip
       - uses: actions/upload-artifact@master
         with: 
-          name: extension.zip
-          path: frontend/extension.zip
+          name: extension
+          path: frontend/extension/
   build-backend:
     runs-on: ubuntu-latest
     steps:
