Add extension ID so it works in Firefox

--- a/frontend/extension/manifest.json
+++ b/frontend/extension/manifest.json
@@ -30,5 +30,10 @@
     "tabs",
     "webNavigation",
     "storage"
-	]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "matt.shindala@gmail.com"
+    }
+  }
 }
