--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,19 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/express-rate-limit": "^3.3.0",
+    "@types/jest": "^24.0.19",
     "@types/node-fetch": "^2.3.4",
     "@types/socket.io": "^2.1.2",
+    "jest": "^24.9.0",
     "nodemon": "^1.18.3",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@types/body-parser": "^1.17.0",
